--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,5 +3,10 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="white_transparent">#95FFFFFF</color>
+    <color name="transparent">#00FFFFFF</color>
     <color name="gray_light">#EBEBEE</color>
+    <color name="gray_card_item">#455D78</color>
+    <color name="gray_card_divider">#5C6876</color>
+    <color name="purple_card_item">#30256D</color>
+    <color name="purple_card_divider">#805CA1</color>
 </resources>
